--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,9 @@ body {
 }
 
 .btn_ColapsarIguales .square{
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
   height: 60px;
   width: 200px;
 }
@@ -52,10 +55,28 @@ body {
 .btn_AyudaMovidaMaxima .square{
   height: 60px;
   width: 180px;
+  text-align: center;
   padding-left:20px ;
+  padding-right: 20px;
   margin-left: 20px;
 }
 
+
+.btn_AyudaMaximosIguales{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 80px;
+}
+
+.btn_AyudaMaximosIguales .square{
+  height: 100px;
+  width: 180px;
+  padding-left:20px ;
+  padding-right: 20px;
+  text-align: center;
+  margin-left: 20px;
+}
 
 .board {
   margin: 20px;
