--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,17 @@ body {
 }
 
 
+
 .squareToPut .square{
   height: 80px;
   width: 80px;
   color:white;
+}
+
+
+.ContenedorBotones{
+  width: 500px;
+  height: fit-content;
 }
 
 .btn_ColapsarIguales{
@@ -35,6 +42,9 @@ body {
   justify-content: center;
   align-items: center;
   padding-right: 80px;
+}
+.btn_ColapsarIguales .ImagenBtn{
+  width: 18%;
 }
 
 .btn_ColapsarIguales .square{
@@ -45,11 +55,22 @@ body {
   width: 200px;
 }
 
+.btn_ColapsarIguales .square:hover{
+  border-color: cadetblue;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 5px;
+}
+
 .btn_AyudaMovidaMaxima{
   display: flex;
   justify-content: center;
   align-items: center;
   padding-right: 80px;
+}
+
+.btn_AyudaMovidaMaxima .ImagenBtn{
+  width: 14%;
 }
 
 .btn_AyudaMovidaMaxima .square{
@@ -61,12 +82,22 @@ body {
   margin-left: 20px;
 }
 
+.btn_AyudaMovidaMaxima .square:hover{
+  border-color: cadetblue;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 5px;
+}
 
 .btn_AyudaMaximosIguales{
   display: flex;
   justify-content: center;
   align-items: center;
   padding-right: 80px;
+}
+
+.btn_AyudaMaximosIguales .ImagenBtn{
+  width: 14%;
 }
 
 .btn_AyudaMaximosIguales .square{
@@ -77,6 +108,14 @@ body {
   text-align: center;
   margin-left: 20px;
 }
+
+.btn_AyudaMaximosIguales .square:hover{
+  border-color: cadetblue;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 5px;
+}
+
 
 .board {
   margin: 20px;
@@ -103,6 +142,10 @@ body {
 
 .rise {
   margin: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 5px;
 }
 
 .riseOnHover:hover {
